# docs/swagger.yaml
@@ -766,6 +766,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.ServersResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
